--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,47 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+	    <!-- JSP & JSTL Dependencies -->
+	    <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>javax.servlet</groupId>
+	        <artifactId>jstl</artifactId>		
+	    </dependency>
+
+	    
+	    <!-- Validation Dependencies -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-validation</artifactId>
+	    </dependency>
+	
+	    <!-- BCrypt  -->
+	    <dependency>
+	        <groupId>org.mindrot</groupId>
+	        <artifactId>jbcrypt</artifactId>
+	        <version>0.4</version>
+	    </dependency>
+	
+	    <!-- Bootstrap Dependencies -->
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>webjars-locator</artifactId>
+	        <version>0.30</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>bootstrap</artifactId>
+	        <version>5.0.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>jquery</artifactId>
+	        <version>3.6.0</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
